--- a/ModernaMediaAngular/src/app/home/homev2/landing/landing.component.scss
+++ b/ModernaMediaAngular/src/app/home/homev2/landing/landing.component.scss
@@ -69,3 +69,15 @@
     }
   }
 }
+
+@media screen and (max-width: 465px) {
+  .landing .content .titles .title {
+    font-size: 2.25rem;
+  }
+  .landing .buttons {
+    flex-direction: column;
+    .btn {
+      margin: 0.25rem 0 !important;
+    }
+  }
+}
