--- a/ModernaMediaAngular/src/app/home/homev2/usp/usp.component.scss
+++ b/ModernaMediaAngular/src/app/home/homev2/usp/usp.component.scss
@@ -32,7 +32,7 @@ section.usp {
         flex-direction: column;
         height: 33%;
         min-height: 350px;
-        min-width: 350px;
+        min-width: 300px;
         max-width: 500px;
         margin: 1rem auto;
         &:nth-child(1) {
